fix th wrap, fix daily环比

--- a/src/index.less
+++ b/src/index.less
@@ -37,6 +37,7 @@ body {
   }
   .ant-table-thead > tr > th {
     color: #666 !important;
+    white-space: nowrap;
   }
   .ant-table-tbody > tr > td {
     color: #333 !important;
